# amiga-par-to-spi-adapter

./: .gitignore  .gitmodules
avr/: flashSDBoxMini.bat  flash_Arduino_as_ISP.bat
esp32/: CMakeLists.txt  sdkconfig
esp32/main/: CMakeLists.txt  Main.cpp  Main.h  highint5.S
examples/spi-test/: build_test.bat  spitest.c
rp2350/: Analysis_of_RPi_2W_WiFi_Conflict_when_using_spi0_on_core1.md  CMakeLists.txt  FreeRTOSConfig.h  README.md  Shared_sdcard_sync_strategy.md  act_mirror.pio  ftp_server.c  ftp_server.h  ftp_types.h  ftp_utils.c  ftp_utils.h  lwipopts.h  main.c  main.h  par_amiga_rx.pio  par_spi.c  pico_sdk_import.cmake  util.c  util.h
rp2350/cmake/freertos/: CMakeLists.txt
rp2350/cmake/freertos/cmsis_rp2350/: rp2350_device.h
rp2350/cmake/freertos/config/: FreeRTOSConfig.h
